--- a/style.css
+++ b/style.css
@@ -3,3 +3,11 @@
         left: 50%;
         transform: translate(-50%);
 }
+#resultado{
+        width: 350px;
+        border: 1px;
+        border-color: black;
+        background-color: #fff;
+        color: black;
+        font-size: 25px;
+}
